--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!-- mid box for navbar -->
         </div>
         <div class="right">
-            <button class="btn">Call us now</button>
+            <button class="btn">Call us</button>
             <button class="btn">Email us</button>
             <!-- righr box for buttons -->
         </div>
